Se ha creado el Header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <img src="" alt="">
+        <nav>
+            <ul>
+                <li>
+                    faq
+                </li>
+                <li>
+                    use cases
+                </li>
+                <li>
+                    blog
+                </li>
+                <li>
+                    newsletter
+                </li>
+            </ul>
+        </nav>
+        <div class="boton">Sing in for free</div>
+    </header>
 </body>
 </html>
