--- a/index.html
+++ b/index.html
@@ -27,5 +27,15 @@
         </nav>
         <div class="boton">Sing in for free</div>
     </header>
+    <section class="section-dos">
+        <img src="./img-desafio/avatar-uno.png" alt="">
+        <div class="texto-2">
+            <h2>One click to talk</h2>
+            <ul>
+                <li>Jump into audio rooms with a single click</li>
+                <li>Securely encrypted & transmitted using WebRTC</li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
