actulizacion section-uno

--- a/index.html
+++ b/index.html
@@ -3,29 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <img src="" alt="">
-        <nav>
-            <ul>
-                <li>
-                    faq
-                </li>
-                <li>
-                    use cases
-                </li>
-                <li>
-                    blog
-                </li>
-                <li>
-                    newsletter
-                </li>
-            </ul>
-        </nav>
-        <div class="boton">Sing in for free</div>
+        <div class="header-r">
+            <nav>
+                <ul>
+                    <li>
+                        FAQ
+                    </li>
+                    <li>
+                        USE CASES
+                    </li>
+                    <li>
+                        BLOG
+                    </li>
+                    <li>
+                        NEWSLETTER
+                    </li>
+                </ul>
+            </nav>
+            <div class="boton">Sing in for free</div>
+        </div>
     </header>
+    <section class="section-uno">
+        <div class="texto">
+            <h1>Wherever you <br> are, you're <br> better together.</h1>
+            <p>Virtual office for remote teams</p>
+            <button>SIGN UP FOR FREE</button>
+        </div>
+        <img src="img/general.png" alt="">
+    </section>
 </body>
 </html>
